Added some text and styles to my html and css files

--- a/index.html
+++ b/index.html
@@ -193,6 +193,11 @@
           </div>
         </div>
       </div>
+
+      <p class="opensource">
+        <a href="https://github.com/Sardonyc95/weatherApp">open-source code</a>
+        <span class="author">by Amarachi Adolphus</span>
+      </p>
     </div>
 
     <script src="src/app.js"></script>
